--- a/src/pages/brands/style.css
+++ b/src/pages/brands/style.css
@@ -407,7 +407,7 @@
     display: none;
   }
   .brands-page-wrapper {
-    padding: 13px;
+    padding: 0 0 13px;
     background-color: #041416;
     width: auto;
   }
