--- a/src/pages/creators/style.css
+++ b/src/pages/creators/style.css
@@ -456,7 +456,7 @@
     display: none;
   }
   .creators-page-wrapper {
-    padding: 13px;
+    padding: 0 0 13px;
     background-color: #041416;
     width: auto;
   }
